# pachy-decrypt

./: .gitignore  Cargo.toml  LICENSE.md  README.md
data/: key-iv.json.example
data/file/: file.pachy.example
src/: keyset.rs  main.rs  pachy.rs
