[package]
name = "pachy-decrypt"
version = "0.1.0"
authors = ["Quaero_et_tego"]
edition = "2021"
rust-version = "1.73"
description = "pachy-decrypt for the Forensic course."
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1.34.0", default-features = false, features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

walkdir = "2.4.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release.package."*"]
codegen-units = 1
strip = true

[profile.release.build-override]
codegen-units = 1
strip = true